--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
             <div class="text-center pt-1 pb-0 col-sm-9 col-md-8 px-0" id="mainSignup">
             
-                <form class="mt-3 mb-3 justify-content-center onsubmit-disable" action="https://www.aweber.com/scripts/addlead.pl" method="post" id="giveaway-signup-form">
+                <form class="mt-3 mb-3 justify-content-center onsubmit-disable" action="https://kingsumo.com/giveaways/lh9t8b/enter" method="post" id="giveaway-signup-form">
                     <input type="hidden" name="_token" value="lu3mu1cvvMPPAUlT4DxcyxEMatnFPuTAkg6wTGmb">
 
                     <div class="w-100">
